--- a/app/src/main/res/layout/activity_array_list.xml
+++ b/app/src/main/res/layout/activity_array_list.xml
@@ -5,12 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#ababab"
     tools:context=".ArrayListActivity">
 
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/myListView" />
+        android:id="@+id/myListView"
+        android:descendantFocusability="blocksDescendants"/>
 
 
 
