--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
                 android:textSize="70sp"
                 android:textStyle="bold" />
 
-        <EditText
+        <TextView
             android:id="@+id/editTextNameProfile"
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -38,7 +38,7 @@
             android:inputType="textEmailAddress"
             android:padding="8dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/editTextEmailAddressProfile"
             android:layout_width="match_parent"
             android:layout_height="45dp"
@@ -51,7 +51,7 @@
             android:inputType="textEmailAddress"
             android:padding="8dp" />
 
-        <EditText
+        <TextView
             android:id="@+id/editTextPasswordProfile"
             android:layout_width="match_parent"
             android:layout_height="62dp"
