--- a/app/src/main/res/layout/activity_divergent.xml
+++ b/app/src/main/res/layout/activity_divergent.xml
@@ -32,7 +32,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
         <VideoView
-            android:id="@+id/video_view"
+            android:id="@+id/video_view1"
             android:layout_width="match_parent"
             android:layout_height="244dp" />
 
