--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="80dp">
 
         <TextView
             android:id="@+id/tvFileContent"
@@ -19,7 +19,7 @@
             android:layout_marginLeft="10dp"
             android:text="TextView"
             android:textColor="@color/black"
-            android:textSize="24dp"
+            android:textSize="30dp"
             android:textStyle="bold" />
     </RelativeLayout>
 
