--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -123,7 +123,7 @@
                         android:layout_height="match_parent"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/img_2" />
+                        android:src="@drawable/vamp" />
 
 
                 </androidx.cardview.widget.CardView>
