--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -73,13 +73,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Take Picture"
-            android:id="@+id/buttonCamera"/>
+            android:id="@+id/buttonCamera"
+            />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Open Picture"
             android:id="@+id/buttonGallery"
             />
+        <ImageView
+            android:layout_marginTop="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/profilePic"
+            android:src="@drawable/user1"/>
 
     </LinearLayout>
 
