--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,12 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Take Picture"
-        android:id="@+id/buttonCamera"/>
+        android:id="@+id/buttonCameraa"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Open Picture"
-        android:id="@+id/buttonGallery"
+        android:id="@+id/buttonGalleryy"
         />
     <ImageView
         android:layout_marginTop="50dp"
