--- a/app/src/main/res/layout/fragment_top.xml
+++ b/app/src/main/res/layout/fragment_top.xml
@@ -140,10 +140,12 @@
 
             </androidx.cardview.widget.CardView>
         </RelativeLayout>
-        <LinearLayout
+        <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="20dp">
             <androidx.cardview.widget.CardView
                 app:cardCornerRadius="20dp"
                 android:layout_width="350dp"
@@ -159,7 +161,7 @@
 
 
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </RelativeLayout>
         <RelativeLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
