--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -26,14 +26,13 @@
             android:src="@drawable/bridgerton"
             android:id="@+id/imageView"
             />
-        <Button
+        <ImageView
             android:id="@+id/favBtn"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_gravity="bottom"
-            android:layout_marginLeft="270dp"
-            android:background="@drawable/ic_baseline_favorite_24"
-            />
+            android:layout_marginLeft="290dp"
+            android:background="@drawable/ic_baseline_favorite_24"/>
 
 
         <TextView
