--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -4,7 +4,11 @@
     <item
         android:id="@+id/settings"
         android:title="Settings" />
+
     <item
         android:id="@+id/exit"
         android:title="Exit" />
+    <item
+        android:id="@+id/stopStartMusic"
+        android:title="Stop/Start Music" />
 </menu>
